tests/paczka1/fuzzy1/46434814.err
Error in line 2: PHuZe0EYWLd A636 83,1
Error in line 3: caQ A41 17,1
Error in line 13: A636 A41 -1,8
Error in line 16: A贸3贸 A贸3贸 51,0
Error in line 6: A636 A41 17,0
Error in line 20: PHuZe0EYWLd A518 87,38
Error in line 18: A636 A518 50,8
Error in line 21: FAwGc53tRy A518 21,6
Error in line 5: PHuZe0EYWLd A518 28,6
